fixed bug of overflow paint

--- a/css/paint_95.css
+++ b/css/paint_95.css
@@ -17,6 +17,7 @@ body {
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     display: inline-block;
+    overflow: hidden;
 }
 #controls {
     background: rgb(247, 239, 239);
